--- a/src/frontend.scss
+++ b/src/frontend.scss
@@ -21,7 +21,7 @@ $root-padding-left: var(--wp--style--root--padding-left, 0);
 
       &-display {
         &--none {
-          display: none;
+          display: none !important;
         }
       }
     }
@@ -43,7 +43,7 @@ $root-padding-left: var(--wp--style--root--padding-left, 0);
 
       &-display {
         &--none {
-          display: none;
+          display: none !important;
         }
       }
 
@@ -93,7 +93,7 @@ $root-padding-left: var(--wp--style--root--padding-left, 0);
 
       &-display {
         &--none {
-          display: none;
+          display: none !important;
         }
       }
 
